tests/baselines/reference/jsxReactTestSuite.errors.txt
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(15,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(17,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(21,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(28,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(32,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(37,3): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(55,3): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(69,3): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(79,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(81,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(83,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(85,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(87,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(89,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(91,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(94,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(97,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(99,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(101,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(103,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(105,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(107,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(109,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(112,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(114,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.


==== tests/cases/conformance/jsx/jsxReactTestSuite.tsx (25 errors) ====
    
    declare var React: any;
    declare var Component:any;
    declare var Composite:any;
    declare var Composite2:any;
    declare var Child:any;
    declare var Namespace:any;
    declare var foo: any;
    declare var bar: any;
    declare var y:any;
    declare var x:any;
    declare var z:any;
    declare var hasOwnProperty:any;
    
    <div>text</div>;
    ~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <div>
    ~~~~~
      {this.props.children}
    ~~~~~~~~~~~~~~~~~~~~~~~
    </div>;
    ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <div>
    ~~~~~
      <div><br /></div>
    ~~~~~~~~~~~~~~~~~~~
      <Component>{foo}<br />{bar}</Component>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      <br />
    ~~~~~~~~
    </div>;
    ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    
    <Composite>
    ~~~~~~~~~~~
        {this.props.children}
    ~~~~~~~~~~~~~~~~~~~~~~~~~
    </Composite>;
    ~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Composite>
    ~~~~~~~~~~~
        <Composite2 />
    ~~~~~~~~~~~~~~~~~~
    </Composite>;
    ~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    var x =
      <div
      ~~~~
        attr1={
    ~~~~~~~~~~~
          "foo" + "bar"
    ~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
        attr2={
    ~~~~~~~~~~~
          "foo" + "bar" +
    ~~~~~~~~~~~~~~~~~~~~~
          
    ~~~~~~
          "baz" + "bug"
    ~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
        attr3={
    ~~~~~~~~~~~
          "foo" + "bar" +
    ~~~~~~~~~~~~~~~~~~~~~
          "baz" + "bug"
    ~~~~~~~~~~~~~~~~~~~
          // Extra line here.
    ~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
        attr4="baz">
    ~~~~~~~~~~~~~~~~
      </div>;
    ~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    (
      <div>
      ~~~~~
        {/* A comment at the beginning */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        {/* A second comment at the beginning */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        <span>
    ~~~~~~~~~~
          {/* A nested comment */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        </span>
    ~~~~~~~~~~~
        {/* A sandwiched comment */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        <br />
    ~~~~~~~~~~
        {/* A comment at the end */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        {/* A second comment at the end */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      </div>
    ~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    );
    
    (
      <div
      ~~~~
        /* a multi-line
    ~~~~~~~~~~~~~~~~~~~
           comment */
    ~~~~~~~~~~~~~~~~~
        attr1="foo">
    ~~~~~~~~~~~~~~~~
        <span // a double-slash comment
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
          attr2="bar"
    ~~~~~~~~~~~~~~~~~
        />
    ~~~~~~
      </div>
    ~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    );
    
    <div>&nbsp;</div>;
    ~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <div>&nbsp; </div>;
    ~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <hasOwnProperty>testing</hasOwnProperty>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component constructor="foo" />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Namespace.Component />;
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Namespace.DeepNamespace.Component />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component { ... x } y
    ~~~~~~~~~~~~~~~~~~~~~~
    ={2 } z />;
    ~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component
    ~~~~~~~~~~
        {...this.props} sound="moo" />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <font-face />;
    ~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component x={y} />;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <x-component />;
    ~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component {...x} />;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component { ...x } y={2} />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component { ... x } y={2} z />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component x={1} {...y} />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    
    <Component x={1} y="2" {...z} {...z}><Child /></Component>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component x="1" {...(z = { y: 2 }, z)} z={3}>Text</Component>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    
    